* 2009/10/16 Guy Martin <gmsoft@tuxicoman.be>
Initial commit.